added about part

--- a/index.html
+++ b/index.html
@@ -8,10 +8,13 @@
     </style>
     <title>Bias in the Modern World</title>
     <meta charset="UTF-8">
-    <meta name="description" content="Research on how bias factors in to life today">
+    <meta name="description" content="Research on how bias factors into life today">
   </head>
   <body>
     <h1>Welcome To Bias in the Modern World!</h1>
+    <h2>About the Project</h2>
+	<p>Bias in the Modern World is our broader look at how the assumptions and generalizations people make can impact other peoples lives. We will look at data from a variety of sources and disseminate that information to the public in easy to grasp pieces that will easily fit into debates and discussion with family or peers. We will research hiring bias in STEM fields, how bias changes the outcomes of custody battles and divorce cases, and many more instances of important but often overlooked trends of discrimination from many sides.</p>
+	  <p>To learn more, go to <a href="https://github.com/Derps9/bias">our github page</a></p>
 </html>
 
 
